2012-02-25 10:29-EST Gregory John Casamento <greg.casamento@gmail.com>

	* PBXVariantGroup.m: More fixes for appending resource names.
	Only use the last path component.

2012-02-25 00:53-EST Gregory John Casamento <greg.casamento@gmail.com>

	* ChangeLog: Add ChangeLog.
	* PBXVariantGroup.m: Fix issue with appending resource
	names.
